# gnome-todo

./: .editorconfig  .gitignore  .gitlab-ci.yml  CONTRIBUTING.md  HACKING.md  NEWS  README.md  flatpak_ci_initiative.yml  gnome-todo.doap  meson.build  meson_options.txt  org.gnome.Todo.json
data/: meson.build  org.gnome.Todo.Autostart.desktop.in.in  org.gnome.Todo.desktop.in.in  org.gnome.Todo.service.in  org.gnome.todo.gschema.xml  todo.gresource.xml
data/appdata/: meson.build  org.gnome.Todo.appdata.xml.in  org.gnome.Todo.appdata.xml.in.in
data/gtk/: menus.ui
data/icons/: icons.gresource.xml  meson.build
data/theme/: Adwaita.css
data/ui/: dnd-row.ui  edit-pane.ui  empty-list.ui  list-selector-grid-item.ui  list-view.ui  new-task-row.ui  notification.ui  plugin-dialog.ui  plugin-row.ui  provider-popover.ui  provider-row.ui  provider-selector.ui  sidebar-list-row.ui  sidebar-panel-row.ui  sidebar-provider-row.ui  sidebar.ui  task-list-panel.ui  task-list-popover.ui  task-row.ui  window.ui
plugins/: meson.build  plugins.gresource.xml
plugins/all-tasks-panel/: all-tasks-panel.plugin  all-tasks-panel.plugin.in  gtd-all-tasks-panel.c  gtd-all-tasks-panel.h  gtd-plugin-all-tasks-panel.c  gtd-plugin-all-tasks-panel.h  meson.build
plugins/background/: gtd-plugin-background.c  meson.build
plugins/dark-theme/: gtd-plugin-dark-theme.c
plugins/eds/: e-source-gnome-todo.c  e-source-gnome-todo.h  gtd-eds-autoptr.h  gtd-plugin-eds.c  gtd-provider-eds.c  gtd-provider-eds.h  gtd-provider-goa.c  gtd-provider-local.c  gtd-provider-local.h  gtd-task-eds.c  gtd-task-eds.h  gtd-task-list-eds.c  gtd-task-list-eds.h  meson.build
plugins/inbox-panel/: gtd-inbox-panel.c  gtd-inbox-panel.h  gtd-plugin-inbox-panel.c  gtd-plugin-inbox-panel.h  inbox-panel.plugin  inbox-panel.plugin.in  meson.build
plugins/next-week-panel/: gtd-next-week-panel.c  gtd-next-week-panel.h  gtd-plugin-next-week-panel.c  gtd-plugin-next-week-panel.h  meson.build  next-week-panel.plugin.in
plugins/night-light/: gtd-night-light-plugin.c  meson.build
plugins/peace/: meson.build  peace.plugin
plugins/scheduled-panel/: gtd-panel-scheduled.c  gtd-plugin-scheduled-panel.c
plugins/task-lists-workspace/: gtd-plugin-task-lists-workspace.c  gtd-plugin-task-lists-workspace.h  gtd-task-list-panel.c  gtd-task-list-panel.ui  gtd-task-lists-workspace.c  gtd-task-lists-workspace.h  gtd-task-lists-workspace.ui  meson.build  task-lists-workspace.plugin.in
plugins/today-panel/: gtd-panel-today.c  gtd-plugin-today-panel.c  gtd-today-omni-area-addin.h  meson.build  today-panel-plugin.c  today-panel.plugin.in
plugins/todo-txt/: gtd-plugin-todo-txt.c  gtd-provider-todo-txt.c  gtd-provider-todo-txt.h  gtd-task-todo-txt.c  gtd-task-todo-txt.h  gtd-todo-txt-parser.c  gtd-todo-txt-parser.h  syntax.md
plugins/todoist/: gtd-plugin-todoist.c  gtd-provider-todoist.c  gtd-todoist-preferences-panel.c  gtd-todoist-preferences-panel.h  meson.build  todoist.plugin.in
src/: gnome-todo.h  gtd-application.c  gtd-application.h  gtd-clock.c  gtd-css-provider.c  gtd-css-provider.h  gtd-debug.h.in  gtd-dnd-row.c  gtd-dnd-row.h  gtd-edit-pane.c  gtd-edit-pane.h  gtd-empty-list-widget.c  gtd-enum-types.h.template  gtd-enums.h  gtd-initial-setup-window.c  gtd-initial-setup-window.ui  gtd-markdown-renderer.c  gtd-max-size-layout.c  gtd-max-size-layout.h  gtd-new-task-row.c  gtd-object.c  gtd-object.h  gtd-omni-area-addin.c  gtd-omni-area-addin.h  gtd-omni-area.c  gtd-omni-area.h  gtd-omni-area.ui  gtd-plugin-dialog-row.c  gtd-plugin-dialog-row.ui  gtd-plugin-dialog.c  gtd-plugin-dialog.ui  gtd-rows-common-private.h  gtd-rows-common.c  gtd-task-list-panel.c  gtd-task-list-panel.h  gtd-task-list-panel.ui  gtd-task-list-view.c  gtd-task-list-view.h  gtd-task-list.c  gtd-task-list.h  (+23 more)
src/animation/: gtd-animatable.c  gtd-animatable.h  gtd-animation-enums.h  gtd-animation-utils.c  gtd-animation-utils.h  gtd-easing.c  gtd-easing.h  gtd-interval.c  gtd-interval.h  gtd-keyframe-transition.c  gtd-keyframe-transition.h  gtd-property-transition.c  gtd-property-transition.h  gtd-timeline-private.h  gtd-timeline.c  gtd-timeline.h  gtd-transition.c  gtd-transition.h
src/contrib/: gtd-list-model-filter.c  gtd-list-model-filter.h  gtd-list-model-sort.c  gtd-list-model-sort.h  gtd-list-store.c  gtd-list-store.h  gtd-task-model-private.h  gtd-task-model.c  gtd-task-model.h
src/core/: gtd-activatable.c  gtd-activatable.h  gtd-clock.c  gtd-clock.h  gtd-log.c  gtd-manager-protected.h  gtd-manager.c  gtd-notification.c  gtd-object.h  gtd-plugin-manager.c  gtd-task-list.c  gtd-task.c
src/engine/: gtd-manager-protected.h  gtd-manager.c  gtd-manager.h  gtd-plugin-manager.c
src/gui/: gtd-bin-layout.c  gtd-bin-layout.h  gtd-color-button.c  gtd-color-button.h  gtd-command-bar.c  gtd-command-bar.h  gtd-command-bar.ui  gtd-dnd-row.ui  gtd-edit-pane.c  gtd-initial-setup-window.c  gtd-max-size-layout.c  gtd-max-size-layout.h  gtd-menu-button.c  gtd-new-task-row.c  gtd-new-task-row.ui  gtd-notification-widget.c  gtd-notification-widget.ui  gtd-omni-area.c  gtd-panel.c  gtd-panel.h  gtd-plugin-dialog-row.ui  gtd-plugin-dialog.c  gtd-plugin-dialog.ui  gtd-provider-popover.c  gtd-provider-popover.ui  gtd-provider-row.c  gtd-provider-row.ui  gtd-provider-selector.c  gtd-provider-selector.ui  gtd-task-list-popover.c  gtd-task-list-popover.h  gtd-task-list-view-model.c  gtd-task-list-view-model.h  gtd-task-list-view.c  gtd-task-list-view.h  gtd-task-list-view.ui  gtd-task-row.c  gtd-task-row.h  gtd-task-row.ui  gtd-widget-private.h  (+8 more)
src/interfaces/: gtd-activatable.c  gtd-activatable.h  gtd-panel.c  gtd-panel.h  gtd-planner.c  gtd-planner.h  gtd-provider.c  gtd-provider.h  gtd-workspace.c  gtd-workspace.h
src/logging/: gtd-log.c
src/models/: gtd-list-model-sort.c  gtd-list-store.c  gtd-task-model.c
src/notification/: gtd-notification-widget.c  gtd-notification-widget.h  gtd-notification-widget.ui
src/plugins/: meson.build  (+1 more)
tests/: dummy-provider.c  dummy-provider.h  meson.build  test-model-filter.c  test-model-sort.c  test-task-list.c  test-task-model.c
(+252 files in other folders)
